<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image_bg"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/string_welcome" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide"
            android:visibility="gone"
            />

        <TableLayout
            android:id="@+id/gl_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_my_gjj"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_my_gjj"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_my_gjj" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/string_my_gjj"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <!--<TextView
                    android:id="@+id/tv_my_gjj"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color_my_gjj"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:drawableTop="@drawable/ic_my_gjj"
                    android:gravity="center"
                    android:text="@string/string_my_gjj"
                    android:textColor="@color/white"
                    android:textSize="18sp" />-->

                <!--<TextView
                    android:id="@+id/tv_policy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/color_policy"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:drawableTop="@drawable/ic_policy"
                    android:gravity="center"
                    android:text="@string/string_policy"
                    android:textColor="@color/white"
                    android:textSize="18sp" />-->
                <LinearLayout
                    android:id="@+id/ll_policy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@color/color_policy"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_policy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/string_policy"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!--<TextView
                    android:id="@+id/tv_loan"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color_flow"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:drawableTop="@drawable/ic_loan"
                    android:gravity="center"
                    android:text="@string/string_loan"
                    android:textColor="@color/white"
                    android:textSize="18sp" />-->
                <LinearLayout
                    android:id="@+id/ll_loan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_flow"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_loan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/string_loan"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!--<TextView
                        android:id="@+id/tv_guide"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/color_guide"
                        android:clickable="true"
                        android:contentDescription="@string/app_name"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_guide"
                        android:gravity="center"
                        android:text="@string/string_guide"
                        android:textColor="@color/white"
                        android:textSize="18sp" />-->

                    <LinearLayout
                        android:id="@+id/ll_guide"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/color_guide"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_guide" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/string_guide"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <!--<TextView
                        android:id="@+id/tv_material"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@color/color_material"
                        android:clickable="true"
                        android:contentDescription="@string/app_name"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_material"
                        android:gravity="center"
                        android:text="@string/string_material"
                        android:textColor="@color/white"
                        android:textSize="18sp" />-->

                    <LinearLayout
                        android:id="@+id/ll_material"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:background="@color/color_material"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_material" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/string_material"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>

            </TableRow>

        </TableLayout>

        <GridView
            android:id="@+id/gv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:cacheColorHint="@color/transparent"
            android:horizontalSpacing="10dp"
            android:listSelector="@color/transparent"
            android:numColumns="2"
            android:verticalSpacing="10dp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
